variables.Variables.scala.error
Erreur de compilation :
Variables:2: error: not found: type int
  avance(nbPas:int)
               ^Variables:2: error: not found: value nbPas
  avance(nbPas:int)
         ^