variables.Variables.scala.code
while(!estSurBiscuit()) {
  avance(nbPas:int)
}
{prendBiscuit()
}
